--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,13 +1,8 @@
-body {
-  font-family: 'Helvetica', sans-serif;
-  margin: 0 auto;
-  max-width: 50em;
-}
-
+/*
 img {
   max-width: 48em;
 }
 
 button {
-  
-}
+
+}*/
