Remove merge conflict code

--- a/app/templates/components/new-city.hbs
+++ b/app/templates/components/new-city.hbs
@@ -13,5 +13,5 @@
     <button class="btn btn-success" {{action 'save'}}>Add City</button>
   </form>
 {{else}}
-  <button class="btn btn-success" {{action 'cityFormShow'}}>New City</button>
+  <button class="btn btn-success" {{action 'cityFormShow'}}>New Citygit</button>
 {{/if}}
