--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,13 @@
 <h4>Today's announcement: {{model.announcement.sales}}</h4><br>
 
 <p>We hope you find exactly what you're looking for in a place to stay.</p>
-
-<ul>
+<div class="row">
   {{#each model.rentals as |rental|}}
-    {{rental-tile rental=rental}}
+    <div class="col-sm-6">
+      {{rental-tile rental=rental}}
+    </div>
   {{/each}}
-</ul>
+</div>
 
 {{new-rental save2="save3"}}
 
@@ -14,7 +15,7 @@
 
 <ul>
   {{#each model.cities as |city|}}
-  <li>{{city.name}}</li>
+  <li>{{#link-to 'city' city.id}}{{city.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
